# monopoly

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.code-generator/: requirements.md  state.json
data/: board_italia.yaml  board_standard.yaml  cards_standard.yaml
scripts/: _narrative_text.py  come_vincere_al_monopoli.py
src/monopoly/: __init__.py  ablation.py  bankruptcy.py  board.py  buildings.py  card_effects.py  cards.py  cli.py  dice.py  effects.py  game.py  jail.py  markov.py  metrics.py  mortgage.py  plots.py  purchase.py  ranking.py  rent.py  simulate.py  state.py  tournament.py  turn.py
src/monopoly/strategies/: __init__.py  base.py  buy_everything.py  buy_nothing.py  color_targeted.py  jail_camper.py  three_houses_rush.py  trader.py  types.py
tests/: test_ablation.py  test_bankruptcy.py  test_board.py  test_board_data.py  test_building.py  test_buildings_mortgage.py  test_card_effects.py  test_cards.py  test_cli.py  test_cross_validation.py  test_dice.py  test_effects.py  test_game.py  test_game_invariants.py  test_jail.py  test_markov.py  test_metrics.py  test_narrative_script.py  test_plots.py  test_project_setup.py  test_purchase.py  test_rent.py  test_simulate.py  test_state.py  test_strategies.py  test_strategy_base.py  test_strategy_color_targeted.py  test_strategy_jail_camper.py  test_strategy_three_houses.py  test_strategy_trader.py  test_tournament.py  test_turn.py  test_video_script.py
